@@ -1118,7 +1118,13 @@ void Fl_Window::resize(int X,int Y,int W,int H) {
   }
   if (is_a_resize) {
     Fl_Group::resize(X,Y,W,H);
-    if (visible_r()) {redraw(); i->wait_for_expose = 1;}
+    if (visible_r()) {
+      redraw(); 
+      // only wait for exposure if this window has a size - a window 
+      // with no width or height will never get an exposure event
+      if (W>0 && H>0)
+        i->wait_for_expose = 1;
+    }
   } else {
     x(X); y(Y);
     flags |= SWP_NOSIZE;
