@@ -5,6 +5,7 @@ CHANGES IN FLTK 1.1.8
 	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
 	  STR #1742, STR #1777, STR #1794, STR #1827, STR #1843,
 	  STR #1796)
+	- Fixed exposure event on zero size windows (STR #1824)
 	- Fixed overlay offset for OS X Quartz (STR #1729)
 	- gl_font() support for Xft+X11 (STR #1809)
 	- Fl_Gl_Window::mode() needed to hide and show the window
